--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -42,6 +42,8 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
+
+
         </com.google.android.material.card.MaterialCardView>
 
     <TextView
@@ -139,15 +141,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:paddingBottom="50dp"
+        android:paddingBottom="100dp"
         android:justificationMode="inter_word"
         android:text="@string/result_solusi"
         android:textSize="15sp"
         android:paddingLeft="32dp"
+
         android:paddingRight="32dp"
         app:layout_constraintTop_toBottomOf="@id/solusi"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            android:backgroundTint="?attr/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/baseline_send_24"
+            android:contentDescription="@string/button_add_post" />
 
 
 
