--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -92,48 +92,55 @@
                tools:visibility="visible" />
 
            <com.google.android.material.card.MaterialCardView
-               android:id="@+id/materialCardView2"
+               android:id="@+id/news_banner"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="16dp"
+               android:clickable="true"
+               android:focusable="true"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="16dp">
 
-
-
-               <ImageView
-                   android:id="@+id/post_image"
+               <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-                   android:scaleType="center"
-                   android:background="?attr/colorOnPrimarySurface"
-                    />
+                   android:layout_height="match_parent">
+                   <ImageView
+                       android:id="@+id/post_image"
+                       android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:scaleType="center"
 
-               <TextView
-                   android:id="@+id/post_date"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:textSize="18sp"
-                   android:layout_marginStart="16dp"
-                   android:textStyle="bold"
-                   android:layout_gravity="bottom"
-                   android:layout_marginBottom="54sp"
-                   android:textColor="@color/white"
-                   android:text="Updated"/>
+                       />
 
-               <TextView
-                   android:id="@+id/post_title"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:textSize="24sp"
-                   android:layout_marginStart="16dp"
-                   android:textStyle="bold"
-                   android:layout_gravity="bottom"
-                   android:layout_marginBottom="16sp"
-                   android:textColor="@color/white"
-                   android:text="Title Post"/>
+                   <TextView
+                       android:id="@+id/post_date"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginBottom="8dp"
+                       android:text="@string/updated"
+                       android:textColor="@color/white"
+                       android:textSize="18sp"
+                       android:textStyle="bold"
+                       android:layout_marginStart="16dp"
+                       app:layout_constraintBottom_toTopOf="@+id/post_title"
+                       app:layout_constraintStart_toStartOf="parent" />
+
+                   <TextView
+                       android:id="@+id/post_title"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_gravity="bottom"
+                       android:text="@string/title_post"
+                       android:textColor="@color/white"
+                       android:textSize="24sp"
+                       android:layout_marginStart="16dp"
+                       android:layout_marginBottom="16dp"
+                       android:textStyle="bold"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       app:layout_constraintStart_toStartOf="parent" />
+               </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
 
 
@@ -146,12 +153,8 @@
                android:layout_marginTop="32dp"
                android:text="@string/scan_penyakit_padi"
                android:textAllCaps="false"
-               app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
+               app:layout_constraintTop_toBottomOf="@+id/news_banner"
                tools:layout_editor_absoluteX="16dp" />
-
-
-
-
 
        </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -163,7 +166,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_anchor="@id/search_button"
-        android:hint="Masukkan text">
+        android:hint="@string/masukkan_text">
         <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
     </com.google.android.material.search.SearchView>
 
